<resources>
    <string name="app_name">Fuel Buddy</string>
    <string name="welcome_text">Hello John</string>
    <string name="profit_txt">Here is your expected profit: </string>
    <string name="expected_profit">Rs. 0</string>
    <string name="posted_tab">Posted</string>
    <string name="requests_tab">Requests</string>
    <string name="confirm_request">CONFIRM REQUEST</string>
    <string name="name"><b>Name: </b></string>
    <string name="qty"><b>Quantity: </b></string>
    <string name="description"><b>Description: </b></string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="confirm_buy">CONFIRM BUY</string>
    <string name="offered_price"><b>Offered Price: </b></string>
    <string name="available_qty"><b>Available Quantity: </b></string>
    <string name="confirm">Confirm</string>
    <string name="qty_hint">Enter the qty needed in litres..</string>
    <string name="des_hint">Enter a description(optional)..</string>

    <string name="postTitle">POSTS</string>
    <string name="fuel_type1">Petrol</string>
    <string name="fuel_type2">Diesel</string>
    <string name="qty_post">1L</string>
    <string name="unit_price">Rs 50.00 </string>
    <string name="confirm_page_name">CONFIRM</string>
    <string name="fuel_type_title">Fuel Type</string>
    <string name="quantity_title">Quantity</string>
    <string name="price_title">Unit Price</string>
    <string name="qty_confirm">20</string>
    <string name="liter">Liters</string>
    <string name="profit_title">Total Profit</string>
    <string name="profit">Rs 1000.00</string>
    <string name="user_name">John C.</string>
    <string name="page_title">ADD FUEL</string>
    <string name="btn_submit">SUBMIT</string>
    <string name="page_edit">EDIT..</string>
    <string name="btn_update">Update</string>
    <string name="btn_delete">Delete</string>
    <string name="price2">Rs 45.00</string>
    <string name="menuNavBar">Menu</string>
    <string name="homeNavBAr">Home</string>
    <string name="vehiclesNavBar">Vehicles</string>


    <string name="title_activity_login_fuel_buddy">Login</string>
    <string name="prompt_Name">      Display Name</string>
    <string name="prompt_email">      Email</string>
    <string name="prompt_password">      Password</string>
    <string name="prompt_repassword">      Re-enter Password</string>
    <string name="prompt_NIC">      NIC</string>
    <string name="prompt_phone">      Contact Number</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcomeMassage">Welcome</string>
    <string name="signInMasage">Sign In to continue</string>
    <string name="vechicleTopic">Vehicles</string>
    <string name="userName">John c.</string>
    <string name="qGasoline">Gasoline : 14l</string>
    <string name="qDiesel">Diesel : 20l</string>
    <string name="Add_vehiclesTopic">ADD Vehicles</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Not a User? Sign up</string>
    <string name="Register">Sign up</string>
    <string name="loginPrompt">Already a user? Sign in</string>
    <string name="account">Account</string>
    <string name="logout">Sign out</string>
    <string name="user_account">User Account</string>
    <string name="profile_photo">profile Photo</string>
    <string name="starting_logo">Starting logo</string>
    <string name="emptyPosts">The posts that you add will be displayed here</string>
    <string name="empty_requests">The requests for your posts will appear here</string>
</resources>