<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="109dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="630dp"
        android:text="@string/confirm_page_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/sellDetails"
        android:layout_width="413dp"
        android:layout_height="400dp"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="194dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.4"
        app:srcCompat="@drawable/confirm_sell_rectangle"
        tools:ignore="ContentDescription,VisualLintBounds" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="280dp"
        android:layout_height="100dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="348dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sellDetails"
        app:srcCompat="@drawable/profit_rectangle_post"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="70dp"
        android:backgroundTint="@color/primary"
        android:text="@string/confirm_page_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/profitText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="141dp"
        android:layout_marginBottom="60dp"
        android:text="@string/profit_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/small_text_post"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        tools:ignore="SpUsage,TextSizeCheck" />

    <TextView
        android:id="@+id/totProfit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="39dp"
        android:text="@string/profit"
        android:textAlignment="center"
        android:textColor="@color/primary"
        android:textSize="@dimen/large_text_post"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <TextView
        android:id="@+id/fuelType1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="22dp"
        android:text="@string/fuel_type_title"
        android:textColor="@color/black"
        android:textSize="@dimen/small_text_post"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sellDetails"
        tools:ignore="SpUsage,TextSizeCheck" />

    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="151dp"
        android:text="@string/fuel_type1"
        android:textColor="@color/black"
        android:textSize="@dimen/large_text_post"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/sellDetails"
        app:layout_constraintTop_toTopOf="@+id/sellDetails" />

    <TextView
        android:id="@+id/confirm_qty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="168dp"
        android:text="@string/quantity_title"
        android:textColor="@color/black"
        android:textSize="@dimen/small_text_post"
        app:layout_constraintBottom_toBottomOf="@+id/sellDetails"
        app:layout_constraintEnd_toStartOf="@+id/priceTitle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpUsage,TextSizeCheck" />

    <TextView
        android:id="@+id/qtyL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="24dp"
        android:text="@string/qty_confirm"
        android:textColor="@color/black"
        android:textSize="@dimen/large_text_post"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/sellDetails"
        app:layout_constraintTop_toBottomOf="@+id/confirm_qty" />

    <TextView
        android:id="@+id/liter"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="92dp"
        android:layout_marginBottom="90dp"
        android:text="@string/liter"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/small_text_post"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/sellDetails"
        app:layout_constraintStart_toStartOf="@+id/sellDetails"
        tools:ignore="SpUsage,TextSizeCheck" />

    <TextView
        android:id="@+id/priceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="83dp"
        android:text="@string/price_title"
        android:textColor="@color/black"
        android:textSize="@dimen/small_text_post"
        app:layout_constraintEnd_toEndOf="@+id/sellDetails"
        app:layout_constraintTop_toBottomOf="@+id/type"
        tools:ignore="SpUsage,TextSizeCheck" />

    <TextView
        android:id="@+id/unitPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="228dp"
        android:layout_marginTop="24dp"
        android:text="@string/unit_price"
        android:textColor="@color/black"
        android:textSize="@dimen/large_text_post"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/sellDetails"
        app:layout_constraintTop_toBottomOf="@+id/priceTitle" />

    <ImageView
        android:id="@+id/hr1"
        android:layout_width="390dp"
        android:layout_height="4dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/sellDetails"
        app:layout_constraintStart_toStartOf="@+id/sellDetails"
        app:layout_constraintTop_toBottomOf="@+id/type"
        app:srcCompat="@drawable/baseline_horizontal_rule_24"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/hr2"
        android:layout_width="400dp"
        android:layout_height="4dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:background="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/baseline_horizontal_rule_24"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/verticalline1"
        android:layout_width="4dp"
        android:layout_height="160dp"
        android:layout_marginStart="203dp"
        android:layout_marginTop="171dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="@+id/sellDetails"
        app:layout_constraintTop_toTopOf="@+id/sellDetails"
        app:srcCompat="@drawable/baseline_rectangle_24"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>